<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.presentacion.MainActivity"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/txt1"
        android:layout_marginTop="29dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urielma_salome"
        android:id="@+id/txt2"
        android:layout_alignTop="@+id/txt1"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/imageView"
        android:src="@mipmap/foto"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:id="@+id/txt3"
        android:layout_above="@+id/txt5"
        android:layout_alignStart="@+id/txt1"
        android:layout_marginBottom="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jiron_barahona"
        android:id="@+id/txt4"
        android:layout_alignBottom="@+id/txt3"
        android:layout_alignStart="@+id/txt2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:id="@+id/txt5"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_17_anios"
        android:id="@+id/txt6"
        android:layout_below="@+id/txt3"
        android:layout_alignStart="@+id/txt4"
        android:layout_marginStart="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacionalidad"
        android:id="@+id/txt7"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nicaragua"
        android:id="@+id/txt8"
        android:layout_alignTop="@+id/txt7"
        android:layout_alignStart="@+id/txt4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:id="@+id/txt9"
        android:layout_alignTop="@+id/txt7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f"
        android:id="@+id/txt10"
        android:layout_alignTop="@+id/txt9"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginEnd="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrera"
        android:id="@+id/txt11"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/txt9"
        android:layout_alignStart="@+id/txt9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ing_sistemas_de_la_informacion"
        android:id="@+id/txt12"
        android:layout_above="@+id/txt13"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugar_de_estudio"
        android:id="@+id/txt13"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/txt11"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universidad_centroamericana_uca"
        android:id="@+id/txt14"
        android:layout_alignTop="@+id/txt13"
        android:layout_alignEnd="@+id/txt8" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/imagen"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/txt13"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
